<resources>
    <string name="app_name">LightHouse</string>
    <string name="title_home">Αρχική</string>
    <string name="title_map">Χάρτης</string>
    <string name="title_notifications">Πληροφορίες</string>
    <string name="hint2">Συνηθής ανάγκες: Κουβέρτες, Φαγητό, Χρήματα</string>
    <string name="hint1">Πως θα μπορούσε να τον αναγνωρίσει κάποιος;</string>
    <string name="epikefalidaSavePerson">Βοήθησε έναν άθρωπο που έχει ανάγκη</string>
    <string name="describeSavePerson">Δώσε μια περιγραφή:</string>
    <string name="needsSavePerson">Τι ανάγκες έχει;</string>
    <string name="save">Αποθήκευση</string>
    <string name="commentHint">Κάποιο σχόλιο για την κατάσταση του ανθρώπου;</string>
    <string name="hint3">(Προαιρετικό)</string>
    <string name="title_activity_login">Σύνδεση</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_application_id">205120301206459</string>
    <string name="fb_login_protocol_scheme">fb205120301206459</string>
    <string name="logoutTxt">Αποσύνδεση</string>
    <string name="title_activity_settings">Ρυθμίσεις</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingtxt">Ρυθμίσεις</string>
    <string name="saveSettings">Αποθήκευση</string>
    <string name="deleteAccount">Διαγραφή Λογαριασμού</string>
    <string name="cancelSettings">Ακύρωση</string>
    <string name="bigX">X</string>
    <string name="by_tehkonnos">by TehKonnos</string>
    <string name="app_desc_long">Η εφαρμογή δημιουργήθηκε για την αξιοποίηση των υπάρχοντων πόρων και την ευαισθητοποίηση των πολιτών, ως προς τα άτομα με ειδικές ανάγκες που μπορεί να βρίσκονται στον δρόμο μας ή στην γειτονιά μας.</string>
    <string name="disclaimer_long">Αθήνα (Κ.Υ.Α.Δ.Α.): 210 524 6516
    </string>
    <string name="disclaimer_short_title">Τηλέφωνα ανάγκης</string>
    <string name="Fab_desc">Προσθήκη ανάγκης</string>
    <string name="ctitle">Title</string>
    <string name="cdate">Date</string>
    <string name="ψusername">Username</string>
    <string name="clocation">Location</string>
    <string name="popTitle">Άτομο με ανάγκη!</string>
    <string name="popLocation">Montreal,Canada</string>
    <string name="popDesc">Περιγραφή:</string>
    <string name="popNeeds">Ανάγκη από:</string>
    <string name="popComment">Σχόλια:</string>
    <string name="PopButtonText">Βρες στο χάρτη!</string>

</resources>